--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,353 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
 </head>
+
 <body>
-  <h1 class="text-3xl text-red-500 font-bold underline">
-    Hello world!
-  </h1>
+  <nav class="px-28 pt-5 w-full">
+    <div class="items-center justify-between flex">
+      <img src="../img/Beamtenvorsorge 1.png" class="h-[72px] w-[295px] " alt="" srcset="">
+      <ul class="flex items-center justify-center text-sm gap-10 ml-24">
+        <li>
+          <a class="text-secendary" href="">STARTSEITE</a>
+        </li>
+        <li class="relative flex items-center gap-1 justify-center">
+          <a href="">SERVICE
+          </a>
+          <img src="../img/Vector (2).png" alt="">
+
+        </li>
+        <li>
+          <a href="">KONTAKT </a>
+        </li>
+      </ul>
+      <div class="flex bg-primary  h-[91px] px-5 ml-16 items-center justify-center gap-4">
+        <i class="fa-solid fa-phone-volume text-secendary text-3xl"></i>
+        <div class="text-white text-base">
+          <p>Nehmen Sie mit uns Kontakt auf</p>
+          <p>Tel.: +49 40 / 334669740</p>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <section class="h-[500px] px-28  w-full bg-primary flex items-center justify-center">
+    <img src="../img/Rectangle 21.png" class="h-[400px] relative" alt="">
+    <div class="bg-white absolute flex flex-col gap-y-5 left-24 w-[400px] p-[10px]">
+      <h3 class="text-3xl">Ihre Experten für die optimale Absicherung von <span class="text-secendary">
+          Beamtenanwärtern</span></h3>
+      <p>Ihre Gesundheit ist unser Anliegen. Wir laden Sie herzlich ein, mit uns in Kontakt zu treten und von unserer
+        spezialisierten Beratung für Beamte zu profitieren. Lassen Sie uns gemeinsam die optimale Absicherung für Ihre
+        Zukunft finden.</p>
+      <button class="bg-secendary block w-full p-[10px] text-white">Kostenfreies Informationsgespräch
+        vereinbaren</button>
+    </div>
+  </section>
+
+  <section class="py-24 px-16 gap-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+    <div class="w-full relative">
+      <img src="../img/banner1.jpg" class="w-full" alt="">
+      <div class="w-[90%] shadow-md p-[10px] absolute inset-x-0 -bottom-32 mx-auto bg-white z-10">
+        <h4 class="text-lg mt-8 mb-3">Beihilfe</h4>
+        <p class="text-base mb-3">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
+        <button class="text-secendary">mehr Informationen</button>
+      </div>
+    </div>
+    <div class="w-full relative">
+      <img src="../img/Rectangle 23.png" class="w-full" alt="">
+      <div class="w-[90%] shadow-md p-[10px] absolute inset-x-0 -bottom-32 mx-auto bg-white z-10">
+        <h4 class="text-lg mt-8 mb-3">Beihilfe</h4>
+        <p class="text-base mb-3">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
+        <button class="text-secendary">mehr Informationen</button>
+      </div>
+    </div>
+    <div class="w-full relative">
+      <img src="../img/Rectangle 24.png" class="w-full" alt="">
+      <div class="w-[90%] shadow-md p-[10px] absolute inset-x-0 -bottom-32 mx-auto bg-white z-10">
+        <h4 class="text-lg mt-8 mb-3">Beihilfe</h4>
+        <p class="text-base mb-3">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
+        <button class="text-secendary">mehr Informationen</button>
+      </div>
+    </div>
+  </section>
+
+  <section class="mt-40 pb-12 px-[100px] bg-[#D9D9D9]">
+    <div class="text-center my-11">
+      <h6
+        class="text-sm my-11 relative inline-block after:content-[''] after:block after:w-full after:h-[3px] after:bg-secendary after:mt-3">
+        Unser Service
+      </h6>
+      <h3 class="text-3xl">Maßgeschneiderte Lösungen </h3>
+    </div>
+
+    <div class="flex gap-[22px]">
+      <div class="flex gap-2 px-5 py h-[250px] bg-white shadow-md flex-col items-center justify-center">
+        <img class="h-10 w-10" src="../img/Group 2.png" alt="">
+        <h5 class="text-lg font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
+        <p class="text-center text-sm">Wir helfen Ihnen dabei, aus einer Vielzahl von
+          Beihilfeergänzungstarifen denjenigen auszuwählen, der nicht nur Ihren aktuellen Anforderungen entspricht,
+          sondern auch langfristig eine flexible und umfassende Absicherung bietet.</p>
+      </div>
+      <div class="flex gap-2 px-5 py h-[250px] flex-col bg-primary text-white items-center justify-center">
+        <img class="h-10 w-10" src="../img/Frame.png" alt="">
+        <h5 class="text-lg font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
+        <p class="text-center text-sm">Wir helfen Ihnen dabei, aus einer Vielzahl von
+          Beihilfeergänzungstarifen denjenigen auszuwählen, der nicht nur Ihren aktuellen Anforderungen entspricht,
+          sondern auch langfristig eine flexible und umfassende Absicherung bietet.</p>
+      </div>
+    </div>
+    <div class="flex gap-[22px] mt-4">
+      <div class="flex gap-2 px-5 py h-[250px] bg-white shadow-md flex-col items-center justify-center">
+        <img class="h-10 w-10" src="../img/Frame (1).png" alt="">
+        <h5 class="text-lg font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
+        <p class="text-center text-sm">Wir helfen Ihnen dabei, aus einer Vielzahl von
+          Beihilfeergänzungstarifen denjenigen auszuwählen, der nicht nur Ihren aktuellen Anforderungen entspricht,
+          sondern auch langfristig eine flexible und umfassende Absicherung bietet.</p>
+      </div>
+      <div class="flex gap-2 px-5 py h-[250px] flex-col bg-primary text-white items-center justify-center">
+        <img class="h-10 w-10" src="../img/Frame3.png" alt="">
+        <h5 class="text-lg font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
+        <p class="text-center text-sm">Wir helfen Ihnen dabei, aus einer Vielzahl von
+          Beihilfeergänzungstarifen denjenigen auszuwählen, der nicht nur Ihren aktuellen Anforderungen entspricht,
+          sondern auch langfristig eine flexible und umfassende Absicherung bietet.</p>
+      </div>
+    </div>
+    </div>
+  </section>
+
+  <section class="py-10 px-[102px]">
+    <div class="flex gap-[22px] items-stretch">
+      <img src="../img/pkv-beratung-beamte.jpg" alt="" class="h-auto w-[350px] flex-shrink-0">
+      <div class="flex-grow">
+        <h6
+          class="text-sm relative font-bold inline-block after:content-[''] after:block after:w-full after:h-[2px] after:bg-secendary after:mt-3">
+          Optimale Krankenversicherung für Beamte
+        </h6>
+        <h2 class="text-xl font-bold">Maßgeschneiderte Lösungen durch umfassenden Tarifvergleich und spezialisierte
+          Beratung</h2>
+        <p class="text-sm my-3">Es ist wichtig, die <b>verschiedenen Angebote der privaten Krankenversicherer zu
+            vergleichen</b>, um den passenden Beihilfeergänzungstarif zu finden, der den individuellen Bedürfnissen von
+          Beamten gerecht wird. Ein umfassender Vergleich der Tarife kann helfen, diejenigen Leistungen zu
+          identifizieren, die über die Beihilfe hinausgehen und eine optimale Absicherung im Krankheitsfall bieten.
+        </p>
+        <p class="text-sm">
+          Als Versicherungsspezialist verstehen wir, dass Beamte eine spezielle Beratung benötigen, wenn es um ihre
+          Krankenversicherung und die ergänzende Absicherung über die Beihilfe hinaus geht. Wir sind
+          darauf spezialisiert, Ihnen als Beamtin oder Beamter, die bestmögliche Versicherungslösung zu bieten, die
+          Ihren individuellen Anforderungen gerecht wird. Dieses beinhaltet ein bereits <b>bestehendes
+            Beamtenverhältnis, aber auch Beamtenanwärter.</b>
+        </p>
+        <p class="text-sm my-3">
+          Expertise im Bereich Beihilfe; Dienstunfähigkeit und PKV: Unsere langjährige Erfahrung und spezialisierte
+          Expertise im Bereich der privaten <b>Krankenversicherung & Dienstunfähigkeitsabsicherung für Beamte</b>
+          ermöglicht es uns, die komplexen Beihilferegelungen und die entsprechenden Zusatzversicherungen genau zu
+          verstehen.</p>
+      </div>
+      <div class="bg-[#F7F7F7] h-14 w-[200px]"></div>
+    </div>
+  </section>
+
+  <section class="bg-primary text-white py-20 px-28">
+    <div class="text-center">
+      <h6
+        class="text-sm my-6 mx-auto relative inline-block after:content-[''] after:inline-block after:w-full after:h-[3px] after:bg-secendary after:mt-3">
+        Beamtenvorsorge.de
+      </h6>
+      <h4 class="text-2xl">Wer sind wir und wofür stehen wir</h4>
+    </div>
+    <div class="flex items-center gap-12">
+      <div>
+        <h3 class="text-base mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
+            class="fa-regular fa-circle-check"></i>Seriös</h3>
+        <div class="flex flex-col text-xs gap-y-8">
+          <p> <b>Verlässlich:</b> Wir stehen für Verlässlichkeit und Integrität in all unseren Dienstleistungen.</p>
+
+          <p><b>Vertrauenswürdig:</b> Unser Engagement für Vertrauenswürdigkeit spiegelt sich in unserer Arbeit wider.
+          </p>
+          <p><b>Zuverlässig:</b> Wir bieten eine zuverlässige und professionelle Plattform für Beamte.
+          </p>
+          <p><b>Glaubwürdig:</b> Unser Ruf basiert auf Glaubwürdigkeit und einer soliden Arbeitsweise.
+          </p>
+          <p><b>Zuverlässige Partnerschaft:</b> Wir sind Ihr zuverlässiger Partner und unterstützen Sie in Ihrem
+            beruflichen Umfeld mit Seriosität.
+          </p>
+        </div>
+      </div>
+      <div>
+        <h3 class="text-base mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
+            class="fa-regular fa-circle-check"></i>Kompetenz</h3>
+        <div class="flex flex-col text-xs gap-y-8">
+          <p> <b>Verlässlich:</b> Wir stehen für Verlässlichkeit und Integrität in all unseren Dienstleistungen.</p>
+
+          <p><b>Vertrauenswürdig:</b> Unser Engagement für Vertrauenswürdigkeit spiegelt sich in unserer Arbeit wider.
+          </p>
+          <p><b>Zuverlässig:</b> Wir bieten eine zuverlässige und professionelle Plattform für Beamte.
+          </p>
+          <p><b>Glaubwürdig:</b> Unser Ruf basiert auf Glaubwürdigkeit und einer soliden Arbeitsweise.
+          </p>
+          <p><b>Zuverlässige Partnerschaft:</b> Wir sind Ihr zuverlässiger Partner und unterstützen Sie in Ihrem
+            beruflichen Umfeld mit Seriosität.
+          </p>
+        </div>
+      </div>
+      <div>
+        <h3 class="text-base mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
+            class="fa-regular fa-circle-check"></i>Beständigkeit</h3>
+        <div class="flex flex-col text-xs gap-y-8">
+          <p> <b>Verlässlich:</b> Wir stehen für Verlässlichkeit und Integrität in all unseren Dienstleistungen.</p>
+
+          <p><b>Vertrauenswürdig:</b> Unser Engagement für Vertrauenswürdigkeit spiegelt sich in unserer Arbeit wider.
+          </p>
+          <p><b>Zuverlässig:</b> Wir bieten eine zuverlässige und professionelle Plattform für Beamte.
+          </p>
+          <p><b>Glaubwürdig:</b> Unser Ruf basiert auf Glaubwürdigkeit und einer soliden Arbeitsweise.
+          </p>
+          <p><b>Zuverlässige Partnerschaft:</b> Wir sind Ihr zuverlässiger Partner und unterstützen Sie in Ihrem
+            beruflichen Umfeld mit Seriosität.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="px-28 pb-36 pt-20">
+    <h6
+      class="text-sm my-6 mx-auto relative inline-block after:content-[''] after:inline-block after:w-full after:h-[2px] after:bg-secendary after:mt-3">
+      Umfangreiche Maßnahmen zur Genesung und Gesundheitserhaltung
+    </h6>
+    <h4 class="text-2xl mb-5">Rehabilitation und Kuren im Beihilferecht für Beamte</h4>
+
+    <div class="mt-2">
+      <h6 class="py-[25px] px-[19px] text-sm font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
+        onclick="toggleContent(1)">
+        Anschlussheilbehandlung: Umfangreiche Maßnahmen zur Genesung und Gesundheitserhaltung
+        <i class="fa-solid text-secendary fa-angle-down"></i>
+      </h6>
+      <div id="content-1" class="text-xs p-[10px] flex flex-col gap-y-3">
+        <p>Die Anschlussheilbehandlung (AHB) ist eine Art medizinischer Rehabilitationsmaßnahme, die unmittelbar an
+          einen Krankenhausaufenthalt anschließt. Sie ist dazu gedacht, die Genesung und Rehabilitation von Patienten
+          nach einer stationären Behandlung zu unterstützen. In der Beihilfe für Beamte bezieht sich die AHB auf eine
+          spezielle Art der medizinischen Rehabilitation, die nach einem
+          stationären Krankenhausaufenthalt erfolgt und dazu dient, den Genesungsprozess des Beamten zu unterstützen.
+        </p>
+        <p>
+          Für die Inanspruchnahme der Anschlussheilbehandlung ist eine ärztliche Verordnung erforderlich, die die
+          medizinische Notwendigkeit der Maßnahme bestätigt. Die Details zur Kostenübernahme und den genauen Abläufen
+          sind jedoch in den Beihilfevorschriften des jeweiligen Bundeslandes festgelegt, können u.U. aber auch zu
+          Selbstbehalten des Beamten führen.
+        </p>
+      </div>
+    </div>
+
+    <div class="mt-2">
+      <h6 class="py-[25px] px-[19px] text-sm font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
+        onclick="toggleContent(2)">
+        Anschlussheilbehandlung: Umfangreiche Maßnahmen zur Genesung und Gesundheitserhaltung
+        <i class="fa-solid text-secendary fa-angle-down"></i>
+      </h6>
+      <div id="content-2" class="text-xs p-[10px] flex flex-col gap-y-3 hide">
+        <p>Die Anschlussheilbehandlung (AHB) ist eine Art medizinischer Rehabilitationsmaßnahme, die unmittelbar an
+          einen Krankenhausaufenthalt anschließt. Sie ist dazu gedacht, die Genesung und Rehabilitation von Patienten
+          nach einer stationären Behandlung zu unterstützen. In der Beihilfe für Beamte bezieht sich die AHB auf eine
+          spezielle Art der medizinischen Rehabilitation, die nach einem
+          stationären Krankenhausaufenthalt erfolgt und dazu dient, den Genesungsprozess des Beamten zu unterstützen.
+        </p>
+        <p>
+          Für die Inanspruchnahme der Anschlussheilbehandlung ist eine ärztliche Verordnung erforderlich, die die
+          medizinische Notwendigkeit der Maßnahme bestätigt. Die Details zur Kostenübernahme und den genauen Abläufen
+          sind jedoch in den Beihilfevorschriften des jeweiligen Bundeslandes festgelegt, können u.U. aber auch zu
+          Selbstbehalten des Beamten führen.
+        </p>
+      </div>
+    </div>
+
+    <div class="mt-2">
+      <h6 class="py-[25px] px-[19px] text-sm font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
+        onclick="toggleContent(3)">
+        Anschlussheilbehandlung: Umfangreiche Maßnahmen zur Genesung und Gesundheitserhaltung
+        <i class="fa-solid text-secendary fa-angle-down"></i>
+      </h6>
+      <div id="content-3" class="text-xs p-[10px] flex flex-col gap-y-3 hide">
+        <p>Die Anschlussheilbehandlung (AHB) ist eine Art medizinischer Rehabilitationsmaßnahme, die unmittelbar an
+          einen Krankenhausaufenthalt anschließt. Sie ist dazu gedacht, die Genesung und Rehabilitation von Patienten
+          nach einer stationären Behandlung zu unterstützen. In der Beihilfe für Beamte bezieht sich die AHB auf eine
+          spezielle Art der medizinischen Rehabilitation, die nach einem
+          stationären Krankenhausaufenthalt erfolgt und dazu dient, den Genesungsprozess des Beamten zu unterstützen.
+        </p>
+        <p>
+          Für die Inanspruchnahme der Anschlussheilbehandlung ist eine ärztliche Verordnung erforderlich, die die
+          medizinische Notwendigkeit der Maßnahme bestätigt. Die Details zur Kostenübernahme und den genauen Abläufen
+          sind jedoch in den Beihilfevorschriften des jeweiligen Bundeslandes festgelegt, können u.U. aber auch zu
+          Selbstbehalten des Beamten führen.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <footer class="bg-primary relative text-white pt-28 pb-8 px-28">
+    <div class="flex items-center absolute top-[-90px] h-32 justify-between shadow-md w-[700px] p-[10px] bg-white mx-auto left-1/2 transform -translate-x-1/2">
+      <div class="text-black">
+        <h4 class="text-xl font-semibold">Kostenfreies Informationsgespräch vereinbaren</h4>
+        <p class="text-xs">Lassen Sie uns gemeinsam die optimale Absicherung für Ihre Zukunft finden.</p>
+      </div>
+      <button class="bg-secendary h-12 p-3 text-white">Termin vereinbaren </button>
+    </div>
+    <div class="mx-auto flex gap-28 justify-between items-start px-4 md:px-16">
+      <div class="w-full md:w-1/3 mb-6 md:mb-0">
+        <img src="../img/Beamtenvorsorge 1.png" alt="Logo" class="mb-4 filter invert">
+        <p class="text-sm mt-8">Ihre Experten für die optimale Absicherung von Beamten & Beamtenanwärtern.</p>
+      </div>
+
+      <div class="w-full md:w-1/3 mb-6 md:mb-0">
+        <h6
+          class="text-sm mb-4 relative inline-block after:content-[''] after:block after:w-full after:h-[3px] after:bg-secendary after:mt-3">
+          Kontakt
+        </h6>
+        <p class="text-sm">Beamtenvorsorge.de <br> Lübecker Str. 101 <br> 22087 Hamburg</p>
+        <p class="mt-3 text-sm">Telefon: +49 40 / 334697740 <br> E-Mail: <a href="mailto:info@beamtenvorsorge.de"
+            class="text-[#2CC2A5]">info@beamtenvorsorge.de</a></p>
+      </div>
+
+      <div class="w-full md:w-1/3">
+        <h6
+          class="text-sm mb-4 relative inline-block after:content-[''] after:block after:w-full after:h-[3px] after:bg-secendary after:mt-3">
+          Unser Service
+        </h6>
+        <ul class="space-y-2 text-sm">
+          <li><a href="#" class="flex items-center"><span class="mr-2"><i class="fa-solid fa-arrow-right"></i></span>
+              Beamte</a></li>
+          <li><a href="#" class="flex items-center"><span class="mr-2"><i class="fa-solid fa-arrow-right"></i></span>
+              Berufsstarter im Öffentlichen Dienst</a></li>
+          <li><a href="#" class="flex items-center"><span class="mr-2"><i class="fa-solid fa-arrow-right"></i></span>
+              Dienstunfähigkeitsversicherung</a></li>
+          <li><a href="#" class="flex items-center"><span class="mr-2"><i class="fa-solid fa-arrow-right"></i></span>
+              Diensthaftpflichtversicherung</a></li>
+          <li><a href="#" class="flex items-center"><span class="mr-2"><i class="fa-solid fa-arrow-right"></i></span>
+              Vermögensschadenhaftpflicht</a></li>
+          <li><a href="#" class="flex items-center"><span class="mr-2"><i class="fa-solid fa-arrow-right"></i></span>
+              Kontakt</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div
+      class="container mx-auto flex flex-wrap justify-between items-center border-t border-gray-600 pt-4 px-4 md:px-16 mt-8 text-xs">
+      <p>&copy; 2024, Beamtenvorsorge.de</p>
+      <div class="flex space-x-4">
+        <a href="#">Impressum | Datenschutz</a>
+      </div>
+    </div>
+  </footer>
+
+
+
+  <script src="./script.js"></script>
+  <script src="https://kit.fontawesome.com/2dfedb0ed0.js" crossorigin="anonymous"></script>
+
 </body>
+
 </html>
