--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-  <nav class="px-28 pt-5 w-full">
+  <nav class="px-3 lg:px-28 lg:pt-5 w-full">
     <div class="items-center justify-between flex">
-      <img src="../img/Beamtenvorsorge 1.png" class="h-[72px] w-[295px] " alt="" srcset="">
-      <ul class="flex items-center justify-center text-sm gap-10 ml-24">
+      <img src="../img/Beamtenvorsorge 1.png" class="w-40 h-12 md:h-[72px] md:w-[295px] " alt="" srcset="">
+      <ul class="md:flex items-center hidden justify-center text-sm gap-10 ml-24">
         <li>
           <a class="text-secendary" href="">STARTSEITE</a>
         </li>
@@ -25,57 +25,67 @@
           <a href="">KONTAKT </a>
         </li>
       </ul>
-      <div class="flex bg-primary  h-[91px] px-5 ml-16 items-center justify-center gap-4">
+      <div class="hidden lg:flex bg-primary  h-[91px] p-3 ml-16 items-center justify-center gap-4">
         <i class="fa-solid fa-phone-volume text-secendary text-3xl"></i>
         <div class="text-white text-base">
           <p>Nehmen Sie mit uns Kontakt auf</p>
           <p>Tel.: +49 40 / 334669740</p>
         </div>
       </div>
+     <div class="block md:hidden"> <i class="fa-solid text-secendary text-2xl fa-bars"></i></div>
     </div>
   </nav>
 
-  <section class="h-[500px] px-28  w-full bg-primary flex items-center justify-center">
-    <img src="../img/Rectangle 21.png" class="h-[400px] relative" alt="">
-    <div class="bg-white absolute flex flex-col gap-y-5 left-24 w-[400px] p-[10px]">
-      <h3 class="text-3xl">Ihre Experten für die optimale Absicherung von <span class="text-secendary">
+  <section class="lg:h-[500px] pb-56 lg:pb-0 lg:px-28 w-full bg-primary flex items-center justify-end">
+    <img src="../img/Rectangle 21.png" class="w-full lg:w-[662px] lg:h-[486px] relative" alt="">
+     <div class="bg-white absolute bottom-0 flex flex-col left-0 right-0 lg:m-0 m-auto lg:left-24 w-[90%] lg:w-[464px] lg:h-96 p-[10px]">
+      <h3 class="text-4xl mt-7">Ihre Experten für die optimale Absicherung von <span class="text-secendary">
           Beamtenanwärtern</span></h3>
-      <p>Ihre Gesundheit ist unser Anliegen. Wir laden Sie herzlich ein, mit uns in Kontakt zu treten und von unserer
+      <p class="mt-6 mb-5">Ihre Gesundheit ist unser Anliegen. Wir laden Sie herzlich ein, mit uns in Kontakt zu treten und von unserer
         spezialisierten Beratung für Beamte zu profitieren. Lassen Sie uns gemeinsam die optimale Absicherung für Ihre
         Zukunft finden.</p>
-      <button class="bg-secendary block w-full p-[10px] text-white">Kostenfreies Informationsgespräch
-        vereinbaren</button>
-    </div>
+      <button class="bg-secendary flex items-center justify-between w-full h-12  p-[10px] text-white">Kostenfreies Informationsgespräch
+        vereinbaren
+      <img src="../img/arrow.png" alt="">
+      </button>
+    </div> 
   </section>
 
-  <section class="py-24 px-16 gap-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
-    <div class="w-full relative">
+  <section class="p-4 lg:py-24 lg:px-16 gap-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+    
+    <div class="pb-24 w-full relative lg:pb-0">
       <img src="../img/banner1.jpg" class="w-full" alt="">
-      <div class="w-[90%] shadow-md p-[10px] absolute inset-x-0 -bottom-32 mx-auto bg-white z-10">
+      <div class="w-[90%] shadow-md p-[10px] absolute inset-x-0 bottom-0 lg:-bottom-32 mx-auto bg-white z-10">
         <h4 class="text-lg mt-8 mb-3">Beihilfe</h4>
         <p class="text-base mb-3">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
-        <button class="text-secendary">mehr Informationen</button>
+        <button class="text-secendary">mehr Informationen
+<i class="fa-solid fa-arrow-right text-secendary"></i>
+        </button>
       </div>
     </div>
-    <div class="w-full relative">
+    <div class="pb-24 w-full relative lg:pb-0">
       <img src="../img/Rectangle 23.png" class="w-full" alt="">
-      <div class="w-[90%] shadow-md p-[10px] absolute inset-x-0 -bottom-32 mx-auto bg-white z-10">
+      <div class="w-[90%] shadow-md p-[10px] absolute inset-x-0 bottom-0 lg:-bottom-32 mx-auto bg-white z-10">
         <h4 class="text-lg mt-8 mb-3">Beihilfe</h4>
         <p class="text-base mb-3">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
-        <button class="text-secendary">mehr Informationen</button>
+        <button class="text-secendary">mehr Informationen
+<i class="fa-solid fa-arrow-right text-secendary"></i>
+        </button>
       </div>
     </div>
-    <div class="w-full relative">
+    <div class="pb-24 w-full relative lg:pb-0">
       <img src="../img/Rectangle 24.png" class="w-full" alt="">
-      <div class="w-[90%] shadow-md p-[10px] absolute inset-x-0 -bottom-32 mx-auto bg-white z-10">
+      <div class="w-[90%] shadow-md p-[10px] absolute inset-x-0 bottom-0 lg:-bottom-32 mx-auto bg-white z-10">
         <h4 class="text-lg mt-8 mb-3">Beihilfe</h4>
         <p class="text-base mb-3">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
-        <button class="text-secendary">mehr Informationen</button>
+        <button class="text-secendary">mehr Informationen
+<i class="fa-solid fa-arrow-right text-secendary"></i>
+        </button>
       </div>
     </div>
   </section>
 
-  <section class="mt-40 pb-12 px-[100px] bg-[#D9D9D9]">
+  <section class="mt-40 pb-12 p-4 lg:px-[100px] bg-[#D9D9D9]">
     <div class="text-center my-11">
       <h6
         class="text-sm my-11 relative inline-block after:content-[''] after:block after:w-full after:h-[3px] after:bg-secendary after:mt-3">
@@ -84,8 +94,8 @@
       <h3 class="text-3xl">Maßgeschneiderte Lösungen </h3>
     </div>
 
-    <div class="flex gap-[22px]">
-      <div class="flex gap-2 px-5 py h-[250px] bg-white shadow-md flex-col items-center justify-center">
+    <div class="lg:flex gap-[22px]">
+      <div class="flex gap-2 mb-3 lg:mb-0 px-5 py h-[250px] bg-white shadow-md flex-col items-center justify-center">
         <img class="h-10 w-10" src="../img/Group 2.png" alt="">
         <h5 class="text-lg font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
         <p class="text-center text-sm">Wir helfen Ihnen dabei, aus einer Vielzahl von
@@ -100,8 +110,8 @@
           sondern auch langfristig eine flexible und umfassende Absicherung bietet.</p>
       </div>
     </div>
-    <div class="flex gap-[22px] mt-4">
-      <div class="flex gap-2 px-5 py h-[250px] bg-white shadow-md flex-col items-center justify-center">
+    <div class="block lg:flex gap-[22px] mt-4">
+      <div class="flex mb-3 lg:mb-0 gap-2 px-5 py h-[250px] bg-white shadow-md flex-col items-center justify-center">
         <img class="h-10 w-10" src="../img/Frame (1).png" alt="">
         <h5 class="text-lg font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
         <p class="text-center text-sm">Wir helfen Ihnen dabei, aus einer Vielzahl von
@@ -119,12 +129,12 @@
     </div>
   </section>
 
-  <section class="py-10 px-[102px]">
-    <div class="flex gap-[22px] items-stretch">
-      <img src="../img/pkv-beratung-beamte.jpg" alt="" class="h-auto w-[350px] flex-shrink-0">
+  <section class="py-10 p-4 lg:px-[102px]">
+    <div class="block lg:flex gap-[22px] items-stretch">
+      <img src="../img/pkv-beratung-beamte.jpg" alt="" class="object-coverh-auto w-full lg:w-[350px] flex-shrink-0">
       <div class="flex-grow">
         <h6
-          class="text-sm relative font-bold inline-block after:content-[''] after:block after:w-full after:h-[2px] after:bg-secendary after:mt-3">
+          class="text-sm mt-5 lg:mt-0 relative font-bold inline-block after:content-[''] after:block after:w-full after:h-[2px] after:bg-secendary after:mt-3">
           Optimale Krankenversicherung für Beamte
         </h6>
         <h2 class="text-xl font-bold">Maßgeschneiderte Lösungen durch umfassenden Tarifvergleich und spezialisierte
@@ -147,11 +157,11 @@
           ermöglicht es uns, die komplexen Beihilferegelungen und die entsprechenden Zusatzversicherungen genau zu
           verstehen.</p>
       </div>
-      <div class="bg-[#F7F7F7] h-14 w-[200px]"></div>
+      <div class="bg-[#F7F7F7] h-14 w-[200px] hidden lg:block"></div>
     </div>
   </section>
 
-  <section class="bg-primary text-white py-20 px-28">
+  <section class="bg-primary text-white p-4 lg:py-20 lg:px-28">
     <div class="text-center">
       <h6
         class="text-sm my-6 mx-auto relative inline-block after:content-[''] after:inline-block after:w-full after:h-[3px] after:bg-secendary after:mt-3">
@@ -159,11 +169,11 @@
       </h6>
       <h4 class="text-2xl">Wer sind wir und wofür stehen wir</h4>
     </div>
-    <div class="flex items-center gap-12">
+    <div class="block lg:flex items-center gap-12">
       <div>
         <h3 class="text-base mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
             class="fa-regular fa-circle-check"></i>Seriös</h3>
-        <div class="flex flex-col text-xs gap-y-8">
+        <div class="flex flex-col text-xs gap-y-4 lg:gap-y-8">
           <p> <b>Verlässlich:</b> Wir stehen für Verlässlichkeit und Integrität in all unseren Dienstleistungen.</p>
 
           <p><b>Vertrauenswürdig:</b> Unser Engagement für Vertrauenswürdigkeit spiegelt sich in unserer Arbeit wider.
@@ -180,7 +190,7 @@
       <div>
         <h3 class="text-base mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
             class="fa-regular fa-circle-check"></i>Kompetenz</h3>
-        <div class="flex flex-col text-xs gap-y-8">
+        <div class="flex flex-col text-xs gap-y-4 lg:gap-y-8">
           <p> <b>Verlässlich:</b> Wir stehen für Verlässlichkeit und Integrität in all unseren Dienstleistungen.</p>
 
           <p><b>Vertrauenswürdig:</b> Unser Engagement für Vertrauenswürdigkeit spiegelt sich in unserer Arbeit wider.
@@ -197,7 +207,7 @@
       <div>
         <h3 class="text-base mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
             class="fa-regular fa-circle-check"></i>Beständigkeit</h3>
-        <div class="flex flex-col text-xs gap-y-8">
+        <div class="flex flex-col text-xs gap-y-4 lg:gap-y-8">
           <p> <b>Verlässlich:</b> Wir stehen für Verlässlichkeit und Integrität in all unseren Dienstleistungen.</p>
 
           <p><b>Vertrauenswürdig:</b> Unser Engagement für Vertrauenswürdigkeit spiegelt sich in unserer Arbeit wider.
@@ -214,7 +224,7 @@
     </div>
   </section>
 
-  <section class="px-28 pb-36 pt-20">
+  <section class="p-4 lg:px-28 pb-36 pt-20">
     <h6
       class="text-sm my-6 mx-auto relative inline-block after:content-[''] after:inline-block after:w-full after:h-[2px] after:bg-secendary after:mt-3">
       Umfangreiche Maßnahmen zur Genesung und Gesundheitserhaltung
@@ -288,15 +298,15 @@
     </div>
   </section>
 
-  <footer class="bg-primary relative text-white pt-28 pb-8 px-28">
-    <div class="flex items-center absolute top-[-90px] h-32 justify-between shadow-md w-[700px] p-[10px] bg-white mx-auto left-1/2 transform -translate-x-1/2">
+  <footer class="bg-primary relative text-white pt-28 pb-8 p-4 lg:px-28">
+    <div class="hidden lg:flex items-center absolute top-[-90px] h-32 justify-between shadow-md w-[700px] p-[10px] bg-white mx-auto left-1/2 transform -translate-x-1/2">
       <div class="text-black">
         <h4 class="text-xl font-semibold">Kostenfreies Informationsgespräch vereinbaren</h4>
         <p class="text-xs">Lassen Sie uns gemeinsam die optimale Absicherung für Ihre Zukunft finden.</p>
       </div>
       <button class="bg-secendary h-12 p-3 text-white">Termin vereinbaren </button>
     </div>
-    <div class="mx-auto flex gap-28 justify-between items-start px-4 md:px-16">
+    <div class="mx-auto block lg:flex gap-28 justify-between items-start px-4 md:px-16">
       <div class="w-full md:w-1/3 mb-6 md:mb-0">
         <img src="../img/Beamtenvorsorge 1.png" alt="Logo" class="mb-4 filter invert">
         <p class="text-sm mt-8">Ihre Experten für die optimale Absicherung von Beamten & Beamtenanwärtern.</p>
