complite and conbin 3 page

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <img src="../img/Beamtenvorsorge 1.png" class="w-40 h-12 md:h-[72px] md:w-[295px] " alt="" srcset="">
       <ul class="md:flex items-center hidden justify-center text-sm gap-10 ml-24">
         <li>
-          <a class="text-secendary" href="">STARTSEITE</a>
+          <a class="text-secendary" href="./index.html">STARTSEITE</a>
         </li>
         <li class="relative flex items-center gap-1 justify-center">
           <a href="javascript:void(0);" onclick="toggleDropdown()">SERVICE</a>
@@ -22,10 +22,10 @@
           <!-- Dropdown Menu -->
           <ul id="dropdown" class="absolute z-20 mt-2 -left-56 hidden bg-white shadow-md top-11">
             <li class="p-2 hover:bg-gray-200">
-              <a href="#">Dienstunfähigkeitsversicherung</a>
+              <a href="./page2.html">Dienstunfähigkeitsversicherung</a>
             </li>
             <li class="p-2 hover:bg-gray-200">
-              <a href="#">Diensthaftpflichtversicherung</a>
+              <a href="./page3.html">Diensthaftpflichtversicherung</a>
             </li>
             <li class="p-2 hover:bg-gray-200">
               <a href="#">Vermögensschadenhaftpflichtversicherung</a>
@@ -57,14 +57,17 @@
   <section class="lg:h-[500px] pb-56 lg:pb-0 lg:px-28 w-full bg-primary flex items-center justify-end">
     <img src="../img/Rectangle 21.png" class="w-full lg:w-[662px] lg:h-[486px] relative" alt="">
     <div
-      class="bg-white absolute bottom-0 flex flex-col left-0 right-0 lg:m-0 m-auto lg:left-40 w-[90%] lg:w-[464px] p-5">
-      <h3 class="text-4xl mt-7">Ihre Experten für die optimale Absicherung von <span class="text-secendary">
+      class="bg-white absolute bottom-5 lg:bottom-0 flex flex-col left-0 right-0 lg:m-0 m-auto lg:left-40 h-[22rem] lg:h-[25rem] w-[90%] lg:w-[464px] p-5">
+      <h3 class="text-2xl lg:text-4xl lg:mt-7">Ihre Experten für die optimale Absicherung von <span
+          class="text-secendary">
           Beamtenanwärtern</span></h3>
-      <p class="mt-6 text-base mb-5">Ihre Gesundheit ist unser Anliegen. Wir laden Sie herzlich ein, mit uns in Kontakt zu treten
+      <p class="mt-6 text-base mb-5">Ihre Gesundheit ist unser Anliegen. Wir laden Sie herzlich ein, mit uns in Kontakt
+        zu treten
         und von unserer
         spezialisierten Beratung für Beamte zu profitieren. Lassen Sie uns gemeinsam die optimale Absicherung für Ihre
         Zukunft finden.</p>
-      <button class="bg-secendary flex items-center justify-between w-full h-12 text-base font- p-[10px] text-white">Kostenfreies
+      <button
+        class="bg-secendary flex items-center justify-between w-full h-12 text-sm lg:text-base p-[10px] text-white">Kostenfreies
         Informationsgespräch
         vereinbaren
         <img src="../img/arrow.png" alt="">
@@ -72,33 +75,36 @@
     </div>
   </section>
 
-  <section class="p-4 lg:py-24 lg:px-16 gap-20 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+  <section class="p-4 lg:py-24 lg:px-16 gap-12 lg:gap-20 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
 
     <div class="pb-24 w-full relative lg:pb-0">
-      <img src="../img/banner1.jpg" class=" h-48 w-96 object-cover " alt="">
+      <img src="../img/banner1.jpg" class="h-72  lg:h-48 w-96 object-cover " alt="">
       <div class="w-[90%] shadow-lg p-[10px] absolute inset-x-0 bottom-0 lg:-bottom-44 mx-auto bg-white z-10">
         <h4 class="text-lg mt-8 font-semibold text-center mb-4">Beihilfe</h4>
-        <p class="text-base text-center mb-4">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
+        <p class="text-base text-center mb-4">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als
+          Beamter</p>
         <button class="text-secendary mx-auto block mb-9 font-semibold">mehr Informationen
           <i class="fa-solid fa-arrow-right text-secendary"></i>
         </button>
       </div>
     </div>
     <div class="pb-24 w-full relative lg:pb-0">
-      <img src="../img/Rectangle 23.png" class="object-cover h-48 w-96" alt="">
+      <img src="../img/Rectangle 23.png" class="object-cover h-72 lg:h-48 w-96" alt="">
       <div class="w-[90%] shadow-lg p-[10px] absolute inset-x-0 bottom-0 lg:-bottom-44 mx-auto bg-white z-10">
         <h4 class="text-lg mt-8 font-semibold text-center mb-4">Beihilfe</h4>
-        <p class="text-base text-center mb-4">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
+        <p class="text-base text-center mb-4">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als
+          Beamter</p>
         <button class="text-secendary mx-auto block mb-9 font-semibold">mehr Informationen
           <i class="fa-solid fa-arrow-right text-secendary"></i>
         </button>
       </div>
     </div>
     <div class="pb-24 w-full relative lg:pb-0">
-      <img src="../img/Rectangle 24.png" class=" h-48 w-96 object-cover" alt="">
+      <img src="../img/Rectangle 24.png" class="h-72 lg:h-48 w-96 object-cover" alt="">
       <div class="w-[90%] shadow-lg p-[10px] absolute inset-x-0 bottom-0 lg:-bottom-44 mx-auto bg-white z-10">
         <h4 class="text-lg mt-8 font-semibold text-center mb-4">Beihilfe</h4>
-        <p class="text-base text-center mb-4">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als Beamter</p>
+        <p class="text-base text-center mb-4">Durchblick im Beihilferecht: Dein Leitfaden für optimale Leistungen als
+          Beamter</p>
         <button class="text-secendary mx-auto block mb-9 font-semibold">mehr Informationen
           <i class="fa-solid fa-arrow-right text-secendary"></i>
         </button>
@@ -106,42 +112,42 @@
     </div>
   </section>
 
-  <section class="mt-40 pb-32 p-4 lg:px-[100px] bg-[#D9D9D9]">
+  <section class="mt-0 lg:mt-40 pb-0 lg:pb-32 p-4 lg:px-[100px] bgwhite lg:bg-[#D9D9D9]">
     <div class="text-center my-11">
       <h6
         class="text-base mt-10 my-5 relative inline-block after:content-[''] after:block after:w-full after:h-[3px] after:bg-secendary after:mt-3">
         Unser Service
       </h6>
-      <h3 class="text-3xl mb-10">Maßgeschneiderte Lösungen </h3>
+      <h3 class="text-xl lg:text-3xl mb-10">Maßgeschneiderte Lösungen </h3>
     </div>
 
     <div class="lg:flex mb-8 gap-[58px]">
-      <div class="flex gap-6 mb-3 lg:mb-0 px-12 py-10 bg-white shadow-md flex-col items-center justify-center">
+      <div class="flex gap-6 mb-5 lg:mb-0 px-12 py-10 bg-white shadow-xl flex-col items-center justify-center">
         <img class="h-[74px] w-[87px]" src="../img/Group 2.png" alt="">
-        <h5 class="text-lg font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
+        <h5 class="text-lg text-center lg:text-start font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
         <p class="text-center text-sm">Wir helfen Ihnen dabei, aus einer Vielzahl von
           Beihilfeergänzungstarifen denjenigen auszuwählen, der nicht nur Ihren aktuellen Anforderungen entspricht,
           sondern auch langfristig eine flexible und umfassende Absicherung bietet.</p>
       </div>
       <div class="flex gap-6 px-12 py-10 flex-col bg-primary text-white items-center justify-center">
         <img class="h-[74px]  w-[87px]" src="../img/Frame.png" alt="">
-        <h5 class="text-lg  font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
+        <h5 class="text-lg text-center lg:text-start font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
         <p class="text-center text-sm">Wir helfen Ihnen dabei, aus einer Vielzahl von
           Beihilfeergänzungstarifen denjenigen auszuwählen, der nicht nur Ihren aktuellen Anforderungen entspricht,
           sondern auch langfristig eine flexible und umfassende Absicherung bietet.</p>
       </div>
     </div>
     <div class="block lg:flex gap-[58px] mt-4">
-      <div class="flex mb-3 lg:mb-0 gap-6 px-12 py-10 bg-white shadow-md flex-col items-center justify-center">
+      <div class="flex mb-5 lg:mb-0 gap-6 px-12 py-10 bg-white shadow-md flex-col items-center justify-center">
         <img class="h-[74px]  w-[87px]" src="../img/Group.png" alt="">
-        <h5 class="text-lg  font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
+        <h5 class="text-lg text-center lg:text-start font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
         <p class="text-center text-sm">Wir helfen Ihnen dabei, aus einer Vielzahl von
           Beihilfeergänzungstarifen denjenigen auszuwählen, der nicht nur Ihren aktuellen Anforderungen entspricht,
           sondern auch langfristig eine flexible und umfassende Absicherung bietet.</p>
       </div>
       <div class="flex gap-6 px-12 py-10 flex-col bg-primary text-white items-center justify-center">
         <img class="h-[74px]  w-[87px]" src="../img/Frame (1).png" alt="">
-        <h5 class="text-lg  font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
+        <h5 class="text-lg text-center lg:text-start font-semibold">Auswahl passender Beihilfeergänzungstarife</h5>
         <p class="text-center text-sm">Wir helfen Ihnen dabei, aus einer Vielzahl von
           Beihilfeergänzungstarifen denjenigen auszuwählen, der nicht nur Ihren aktuellen Anforderungen entspricht,
           sondern auch langfristig eine flexible und umfassende Absicherung bietet.</p>
@@ -150,17 +156,19 @@
     </div>
   </section>
 
-  <section class="py-24 p-4 lg:px-[102px] lg:py-20">
+  <section class="py-11 p-4 lg:px-[102px] lg:py-20">
     <div class="block lg:flex gap-[58px] items-stretch">
       <img src="../img/pkv-beratung-beamte.jpg" alt="" class="object-cover w-full lg:w-[350px] flex-shrink-0">
       <div class="flex-grow">
         <h6
-          class="text-base mt-5 lg:mt-0 relative font-bold inline-block after:content-[''] after:block after:w-full after:h-[2px] after:bg-secendary after:mt-3">
+          class="text-base mt-20 mb-6 lg:mb-0 lg:mt-0 relative font-bold inline-block after:content-[''] after:block after:w-full after:h-[2px] after:bg-secendary after:mt-3">
           Optimale Krankenversicherung für Beamte
         </h6>
-        <h2 class="text-3xl text-[#1D183A] font-bold">Maßgeschneiderte Lösungen durch umfassenden Tarifvergleich und spezialisierte
+        <h2 class="text-xl mb-6 lg:mb-0 lg:text-3xl text-[#1D183A] font-bold">Maßgeschneiderte Lösungen durch
+          umfassenden Tarifvergleich und spezialisierte
           Beratung</h2>
-        <p class="text-sm text-[#333333] my-3">Es ist wichtig, die <b>verschiedenen Angebote der privaten Krankenversicherer zu
+        <p class="text-sm text-[#333333] my-3">Es ist wichtig, die <b>verschiedenen Angebote der privaten
+            Krankenversicherer zu
             vergleichen</b>, um den passenden Beihilfeergänzungstarif zu finden, der den individuellen Bedürfnissen von
           Beamten gerecht wird. Ein umfassender Vergleich der Tarife kann helfen, diejenigen Leistungen zu
           identifizieren, die über die Beihilfe hinausgehen und eine optimale Absicherung im Krankheitsfall bieten.
@@ -183,18 +191,18 @@
   </section>
 
   <section class="bg-primary text-white p-4 lg:py-20 lg:px-28">
-    <div class="text-center">
+    <div class="text-start lg:text-center">
       <h6
         class="text-sm my-5 mx-auto relative inline-block after:content-[''] after:inline-block after:w-full after:h-[3px] after:bg-secendary after:mt-3">
         Beamtenvorsorge.de
       </h6>
-      <h4 class="text-3xl mb-16">Wer sind wir und wofür stehen wir</h4>
+      <h4 class="text-xl lg:text-3xl mb-11 lg:mb-16">Wer sind wir und wofür stehen wir</h4>
     </div>
     <div class="block lg:flex items-center gap-16">
       <div>
-        <h3 class="text-xl mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
+        <h3 class="text-xl mb-6 mt-5 gap-2 font-normal lg:font-medium flex items-center text-secendary"><i
             class="fa-regular fa-circle-check"></i>Seriös</h3>
-        <div class="flex flex-col text-base gap-y-4 lg:gap-y-8">
+        <div class="flex flex-col text-sm gap-y-4 lg:gap-y-8">
           <p> <b>Verlässlich:</b> Wir stehen für Verlässlichkeit und Integrität in all unseren Dienstleistungen.</p>
 
           <p><b>Vertrauenswürdig:</b> Unser Engagement für Vertrauenswürdigkeit spiegelt sich in unserer Arbeit wider.
@@ -209,9 +217,9 @@
         </div>
       </div>
       <div>
-        <h3 class="text-xl mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
+        <h3 class="text-xl mb-6 mt-5 gap-2 font-normal lg:font-medium flex items-center text-secendary"><i
             class="fa-regular fa-circle-check"></i>Kompetenz</h3>
-        <div class="flex flex-col text-base gap-y-4 lg:gap-y-8">
+        <div class="flex flex-col text-sm gap-y-4 lg:gap-y-8">
           <p> <b>Verlässlich:</b> Wir stehen für Verlässlichkeit und Integrität in all unseren Dienstleistungen.</p>
 
           <p><b>Vertrauenswürdig:</b> Unser Engagement für Vertrauenswürdigkeit spiegelt sich in unserer Arbeit wider.
@@ -226,9 +234,9 @@
         </div>
       </div>
       <div>
-        <h3 class="text-xl mb-5 mt-5 gap-2 font-medium flex items-center text-secendary"><i
+        <h3 class="text-xl mb-6 mt-5 gap-2 font-normal lg:font-medium flex items-center text-secendary"><i
             class="fa-regular fa-circle-check"></i>Beständigkeit</h3>
-        <div class="flex flex-col text-base gap-y-4 lg:gap-y-8">
+        <div class="flex flex-col text-sm gap-y-4 lg:gap-y-8">
           <p> <b>Verlässlich:</b> Wir stehen für Verlässlichkeit und Integrität in all unseren Dienstleistungen.</p>
 
           <p><b>Vertrauenswürdig:</b> Unser Engagement für Vertrauenswürdigkeit spiegelt sich in unserer Arbeit wider.
@@ -245,20 +253,21 @@
     </div>
   </section>
 
-  <section class="p-4 lg:px-28 pb-36 pt-20">
+  <section class="p-4 lg:px-28 pb-16 lg:pb-36 pt-10 lg:pt-20">
     <h6
       class="text-base font-medium my-6 mx-auto relative inline-block after:content-[''] after:inline-block after:w-full after:h-[2px] after:bg-secendary after:mt-3">
       Umfangreiche Maßnahmen zur Genesung und Gesundheitserhaltung
     </h6>
-    <h4 class="text-3xl mb-5">Rehabilitation und Kuren im Beihilferecht für Beamte</h4>
+    <h4 class="text-xl lg:text-3xl mb-5">Rehabilitation und Kuren im Beihilferecht für Beamte</h4>
 
     <div class="mt-2">
-      <h6 class="py-[25px] px-[19px] text-base font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
+      <h6
+        class="py-[25px] px-[19px] text-sm lg:text-base font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
         onclick="toggleContent(1)">
         Anschlussheilbehandlung: Umfangreiche Maßnahmen zur Genesung und Gesundheitserhaltung
         <i class="fa-solid text-secendary fa-angle-down"></i>
       </h6>
-      <div id="content-1" class="text-base font-normal p-[10px] flex flex-col gap-y-3">
+      <div id="content-1" class="text-sm lg:text-sm font-normal p-[10px] flex flex-col gap-y-3">
         <p>Die Anschlussheilbehandlung (AHB) ist eine Art medizinischer Rehabilitationsmaßnahme, die unmittelbar an
           einen Krankenhausaufenthalt anschließt. Sie ist dazu gedacht, die Genesung und Rehabilitation von Patienten
           nach einer stationären Behandlung zu unterstützen. In der Beihilfe für Beamte bezieht sich die AHB auf eine
@@ -275,12 +284,13 @@
     </div>
 
     <div class="mt-2">
-      <h6 class="py-[25px] px-[19px] text-base font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
+      <h6
+        class="py-[25px] px-[19px] text-sm lg:text-base font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
         onclick="toggleContent(2)">
         Anschlussheilbehandlung: Umfangreiche Maßnahmen zur Genesung und Gesundheitserhaltung
         <i class="fa-solid text-secendary fa-angle-down"></i>
       </h6>
-      <div id="content-2" class="text-base font-normal p-[10px] flex flex-col gap-y-3 hide">
+      <div id="content-2" class="text-sm lg:text-base font-normal p-[10px] flex flex-col gap-y-3 hide">
         <p>Die Anschlussheilbehandlung (AHB) ist eine Art medizinischer Rehabilitationsmaßnahme, die unmittelbar an
           einen Krankenhausaufenthalt anschließt. Sie ist dazu gedacht, die Genesung und Rehabilitation von Patienten
           nach einer stationären Behandlung zu unterstützen. In der Beihilfe für Beamte bezieht sich die AHB auf eine
@@ -297,12 +307,13 @@
     </div>
 
     <div class="mt-2">
-      <h6 class="py-[25px] px-[19px] text-base font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
+      <h6
+        class="py-[25px] px-[19px] text-sm lg:text-base font-medium cursor-pointer flex items-center justify-between bg-[#F7F7F7]"
         onclick="toggleContent(3)">
         Anschlussheilbehandlung: Umfangreiche Maßnahmen zur Genesung und Gesundheitserhaltung
         <i class="fa-solid text-secendary fa-angle-down"></i>
       </h6>
-      <div id="content-3" class="text-base font-normal p-[10px] flex flex-col gap-y-3 hide">
+      <div id="content-3" class="text-sm lg:text-base font-normal p-[10px] flex flex-col gap-y-3 hide">
         <p>Die Anschlussheilbehandlung (AHB) ist eine Art medizinischer Rehabilitationsmaßnahme, die unmittelbar an
           einen Krankenhausaufenthalt anschließt. Sie ist dazu gedacht, die Genesung und Rehabilitation von Patienten
           nach einer stationären Behandlung zu unterstützen. In der Beihilfe für Beamte bezieht sich die AHB auf eine
@@ -320,7 +331,7 @@
   </section>
 
 
-  <footer class="bg-primary relative text-white pt-28 pb-8 p-4 lg:px-28">
+  <footer class="bg-primary relative text-white pt-16 lg:pt-28 pb-8 p-4 lg:px-28">
     <div
       class="hidden lg:flex items-center absolute top-[-90px] h-32 justify-between shadow-md w-[700px] px-[20px] bg-white mx-auto left-1/2 transform -translate-x-1/2">
       <div class="text-black">
